<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="EjectionGateState" Id="{fcf35701-bcb1-4f95-8e62-1cf0e157674d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE EjectionGateState :
(
	State_Init 					,
	State_AutoStart         	,
	State_AutoStop          	,
	State_AutoEjectOn			,
	State_AutoBackToInit        ,
	State_Override				,
	State_Error					
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>